syntax = "proto3";

package internal.protocol.proto;

option go_package = "github.com/k1nky/gophkeeper/internal/protocol/proto";

message Meta {
    string id = 1;
    string extra = 2;
    string alias = 3;
    int32 type = 4;
    int64 revision = 5;
    bool is_deleted = 6;
}

message Data {
    bytes chunk_data = 1;
}

message GetSecretMetaRequest {
    oneof key {
        string id = 1;
        string alias = 2;
    }
}

message GetSecretDataRequest {
    string id = 1;
}

message PutSecretRequest {
    oneof data {
        Meta meta = 1;
        Data chunk_data = 2;
    }
}

message ListSecretRequest {
    int64 user_id = 1;
}

message ListSecretResponse {
    repeated Meta meta = 1;
}


service Keeper {
    rpc GetSecretMeta(GetSecretMetaRequest) returns (Meta);
    rpc GetSecretData(GetSecretDataRequest) returns (stream Data);
    rpc PutSecret(stream PutSecretRequest) returns (Meta);
    rpc ListSecrets(ListSecretRequest) returns (ListSecretResponse);
}